# functional-programming-with-haskell

./: .gitignore  Makefile  README.md
docs/: index.html
docs/highlight.js/: highlight.pack.js
docs/reveal.js/css/theme/: ebackman.css
src/: slides.md  theme.css
src/examples/: Examples.hs  examples.cabal
