name:                examples
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/erikbackman/examples#readme
license:             BSD3
license-file:        LICENSE
author:              Erik Backman
maintainer:          example@example.com
copyright:           2019 Erik Backman 
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files: 

executable examples
  hs-source-dirs:      .
  main-is:             Examples.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
